# game-insights-api

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
db/: __init__.py  db.py  db_utils.py  models.py  orm_models.py  schema.sql
src/: __init__.py  cli.py  ingest.py  pydantic_models.py
src/api/: dependencies.py  main.py
src/api/routers/: games.py  genres.py  publishers.py
src/cli/: cli.py
src/db/: db.py  ingest.py
src/models/orm_models/: __init__.py  game.py  game_genre.py  game_length.py  game_publisher.py  genre.py  publisher.py
src/models/pydantic_models/: __init__.py  game_input.py  length.py  metrics.py  pydantic_models.py
src/models/pydantic_models/api/: game_length_response.py  game_response.py  game_summary.py  game_update.py  genre_response.py  publisher_response.py
src/models/pydantic_models/ingestion/: features.py  game_input.py  metadata.py  playstyle.py  release.py
tests/: conftest.py  test.py  test_db_integration.py  test_ingest.py
tests/api/: test_games.py  test_genres.py  test_publishers.py
