[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "game-insights-api"
version = "1.0.0"
requires-python = ">=3.12"
description = "Simple side project to store video game data and expose it through a custom API"
dependencies = [
    "psycopg2-binary~=2.9.9",
    "sqlalchemy~=2.0.0",
    "pydantic~=2.13.3",
    "python-dotenv~=1.0.1",
    "fastapi[standard]~=0.110.0",
    "uvicorn~=0.30.0",
    "httpx~=0.28.1",
]

[project.optional-dependencies]
dev = ["pytest~=8.2.0", "httpx~=0.27.0"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require a running database (deselect with '-m not integration')",
]

[project.urls]
Repository = "https://github.com/justinZ45/game-insights-api"

[project.scripts]
gia = "src.cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.fastapi]
entrypoint = "src.api.main:app"
