[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "game-insights-api"
version = "1.0.0"
description = "Simple side project to store video game data and expose it through a custom API"
license = "MIT"
packages = [{ include = "src" }]

[tool.poetry.urls]
"Repository" = "https://github.com/justinZ45/game-insights-api"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "~2.0.49"
pydantic = "~2.13.4"
psycopg2-binary = "2.9.9"
fastapi = { version = "^0.136.1", extras = ["standard"] }
httpx = "^0.28.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[tool.poetry.scripts]
gia = "src.cli.cli:main"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require a running database (deselect with '-m not integration')",
]
